Remove all testing files
Remove directories 06-12 -- they only contain testing files that I will
never modify.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 *.swp
 
-/_build
+/_build/
 .merlin
 
 *.cmp
@@ -8,7 +8,10 @@
 *.out
 *.tst
 
-06/add
-06/max
-06/pong
-06/rect
+/06
+/07
+/08
+/09
+/10
+/11
+/12
