--- a/virtual_machine_translator/dune
+++ b/virtual_machine_translator/dune
@@ -1,3 +1,8 @@
+(executable
+ (name virtual_machine_translator)
+ (libraries core stdio)
+ (preprocess (pps ppx_jane)))
+
 (rule
  (targets lexer.ml)
  (deps lexer.mll)
