compiler: make it build, add scaffolding for reading files

--- a/jack_compiler/dune
+++ b/jack_compiler/dune
@@ -1,3 +1,8 @@
+(executable
+ (name jack_compiler)
+ (libraries core stdio)
+ (preprocess (pps ppx_jane)))
+
 (rule
  (targets lexer.ml)
  (deps lexer.mll)
